creating a scene sequencer strip with python crash blender #65677

Closed
opened 2019-06-10 03:15:32 +02:00 by Paul Szajner · 5 comments

System Information
Operating system: Linux-4.18.0-2-amd64-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 410.78

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-09 21:43, hash: 030c7df19d
Worked: (optional)

Short description of error
Adding a scene strip to the sequencer with python lead to a crash, this doesn't append when it's added regularely through the UI.

Exact steps for others to reproduce the error
Open the attached file, it contains 2 scenes and a small python script ,
the script just add the second scene to the first one as a sequencer strip.
Running the script should lead to a crash.
sequencer_bug.blend

**System Information** Operating system: Linux-4.18.0-2-amd64-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 410.78 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-09 21:43, hash: `030c7df19d` Worked: (optional) **Short description of error** Adding a scene strip to the sequencer with python lead to a crash, this doesn't append when it's added regularely through the UI. **Exact steps for others to reproduce the error** Open the attached file, it contains 2 scenes and a small python script , the script just add the second scene to the first one as a sequencer strip. Running the script should lead to a crash. [sequencer_bug.blend](https://archive.blender.org/developer/F7096908/sequencer_bug.blend)
Author

Added subscriber: @sozap

Added subscriber: @sozap

Added subscribers: @iss, @Sergey, @mont29

Added subscribers: @iss, @Sergey, @mont29
Richard Antalik was assigned by Bastien Montagne 2019-06-10 11:43:44 +02:00

Confirmed, with and assert as a bonus/warnjng:

@sergey or @ISS, guess that’s for one of you guys?

Confirmed, with and assert as a bonus/warnjng: ```source/blender/blenkernel/intern/sound.c:88, sound_verify_evaluated_id(), at 'id->tag & (LIB_TAG_COPIED_ON_WRITE | LIB_TAG_COPIED_ON_WRITE_EVAL_RESULT | LIB_TAG_NO_MAIN)' ``` @sergey or @ISS, guess that’s for one of you guys?

This issue was referenced by bcd0b6fb8e

This issue was referenced by bcd0b6fb8ef0161cbac31992d170e15435c56c72

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65677
No description provided.