Fix T65677: Creating a scene sequencer strip with python crash blender